Home page implemented

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,3 +17,37 @@ header {
     left: 0;
 }
 
+.movies-container {
+    margin-top: 67px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.movies-container h1 {
+    font-size: 24px;
+    color: #293845;
+    letter-spacing: 0.04em;
+    margin: 50px 0;
+}
+
+.movies-container ul {
+    padding: 0 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.movies-container li {
+    width: 145px;
+    height: 209px;
+    background-color: #FFFFFF;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.1);
+    margin-bottom: 11px;
+}
+
+.movies-container li img {
+    width: 129px;
+    height: 193px;
+}
