--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,14 +17,14 @@ header {
     left: 0;
 }
 
-.movies-container {
+.movies-container, .sessions-container {
     margin-top: 67px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.movies-container h1 {
+h1 {
     font-size: 24px;
     color: #293845;
     letter-spacing: 0.04em;
@@ -50,4 +50,44 @@ header {
 .movies-container li img {
     width: 129px;
     height: 193px;
+}
+
+.sessions-container ul {
+    width: 100%;
+    padding: 0 24px;    
+}
+
+.sessions-container li {
+    margin-bottom: 30px;
+}
+
+.sessions-container li h2 {
+    font-size: 20px;
+    color: #293845;
+    letter-spacing: 0.02em;
+    margin-bottom: 27px;
+}
+
+.sessions-container .sessions {
+    display: flex;
+    flex-wrap: wrap;
+} 
+
+.sessions-container .sessions .session {
+    width: 83px;
+    height: 43px;
+    background-color: #E8833A;
+    border-radius: 3px;
+    color: #FFFFFF;
+    font-size: 18px;
+    letter-spacing: 0.02em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 8px 8px 0;
+    cursor: pointer;
+} 
+
+.escondido {
+    display: none;
 }
