--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,7 +17,7 @@ header {
     left: 0;
 }
 
-.movies-container, .sessions-container {
+.movies-container, .sessions-container, .seats-container {
     margin-top: 67px;
     display: flex;
     flex-direction: column;
@@ -86,7 +86,57 @@ h1 {
     justify-content: center;
     margin: 0 8px 8px 0;
     cursor: pointer;
-} 
+}
+
+.sessions-container .sessions .session:active {
+    background-color: #E8730A;
+}
+
+.seats-container h1 {
+    margin-bottom: 0;
+}
+
+.seats-container .seats-row {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 24px;   
+}
+
+.seats-container .seats-row .seat, .seats-subtitle .seat {
+    width: 26px;
+    height: 26px;
+    border: 1px solid #808F9D;
+    background-color: #C3CFD9;
+    font-size: 11px;
+    letter-spacing: 0.04em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    margin: 18px 7px 0 0;
+}
+
+.seats-subtitle .seat {
+    margin: 0;
+}
+
+.seats-subtitle {
+    margin-top: 16px;
+    display: flex;
+}
+
+.seats-subtitle div:first-of-type {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.seats-subtitle span {
+    font-size: 13px;
+    color: #4E5A65;
+    letter-spacing: -0.013em;
+    margin-top: 10px;
+}
 
 .escondido {
     display: none;
