Footer implemented + Seats page implemented

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -24,6 +24,10 @@ header {
     align-items: center;
 }
 
+.sessions-container, .seats-container {
+    margin-bottom: 117px;
+}
+
 h1 {
     font-size: 24px;
     color: #293845;
@@ -102,7 +106,7 @@ h1 {
     padding-left: 24px;   
 }
 
-.seats-container .seats-row .seat, .seats-subtitle .seat {
+.seats-container .seats-row .seat, .seats-subtitle-box .seat {
     width: 26px;
     height: 26px;
     border: 1px solid #808F9D;
@@ -114,29 +118,127 @@ h1 {
     justify-content: center;
     border-radius: 50px;
     margin: 18px 7px 0 0;
+    cursor: pointer;
 }
 
-.seats-subtitle .seat {
+.seats-subtitle-box .seat {
     margin: 0;
 }
 
-.seats-subtitle {
-    margin-top: 16px;
-    display: flex;
+.seat.selected {
+    border: 1px solid #1AAE9E;
+    background-color: #8DD7CF; 
 }
 
-.seats-subtitle div:first-of-type {
+.seat.unavailable {
+    border: 1px solid #F7C52B;
+    background-color: #FBE192; 
+}
+
+.seats-subtitle-box {
+    margin-top: 16px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.seats-subtitle-box .seat-subtitle {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-right: 30px;
 }
 
-.seats-subtitle span {
+.seats-subtitle-box .seat-subtitle:last-child {
+    margin-right: 0;
+}
+
+.seats-subtitle-box span {
     font-size: 13px;
     color: #4E5A65;
     letter-spacing: -0.013em;
-    margin-top: 10px;
+    margin-top: 8px;
 }
+
+.seats-buyer-box {
+    width: 100%;
+    margin-top: 42px;
+    padding: 0 24px;
+}
+
+.seats-buyer-box h2 {
+    font-size: 18px;
+    color: #293845;
+    margin-bottom: 3px;
+}
+
+.seats-buyer-box input {
+    width: 100%;
+    height: 51px;
+    border-radius: 3px;
+    border: 1px solid #D5D5D5;
+    margin-bottom: 7px;
+    padding-left: 18px;
+    font-size: 18px;
+    font-style: italic;
+    color: #293845;
+}
+
+::-webkit-input-placeholder {
+    color: #AFAFAF;
+ }
+
+.seats-container button {
+    width: 225px;
+    height: 42px;
+    margin: 50px 0 30px 0;
+    background-color: #E8833A;
+    border-radius: 3px;
+    letter-spacing: 0.04em;
+    font-size: 18px;
+    color: #FFFFFF;
+    border: none;
+}
+
+.seats-container button:active {
+    background-color: #E8730A;
+}
+
+.footer {
+    width: 100%;
+    height: 117px;
+    background-color: #DFE6ED;
+    border-top: 1px solid #9EADBA;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+}
+
+.footer-image-box {
+    width: 64px;
+    height: 89px;
+    border-radius: 2px;
+    background-color: #FFFFFF;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 14px;
+}
+
+.footer img {
+    width: 48px;
+    height: 72px;
+}
+
+.footer-text {
+    font-size: 26px;
+    color: #293845;
+    line-height: 30px;
+}
+
 
 .escondido {
     display: none;
