--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -49,6 +49,9 @@ h1 {
     border-radius: 3px;
     box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.1);
     margin-bottom: 11px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .movies-container li img {
